--- a/praca_domowa_podstawy_grafiki.rmd
+++ b/praca_domowa_podstawy_grafiki.rmd
@@ -15,36 +15,55 @@ Hoaglin, Mosteller i Tukey (1983) zebrali dane na temat poziomu beta-endorfin we
 Przygotuj dwa histogramy ilustrujący rozkład wartości w obu pomiarach. Nie zapomnij o nałożeniu na wykres legendy oraz podpisów osi. Co możesz na podstawie tych dwóch histogramów wywnioskować?
 
 ```{r}
-zad1 <- read.csv("Dane/hoaglin1983.csv")
 wcześniej <- zad1[,"X12_hours"]
 później <- zad1[,"X10_minutes"]
+par(mfrow = c(1,2))
 hist(wcześniej, main = "Poziomy 12h przed operacją", xlab = "Poziomy[fmol/ml]", ylab = "U ilu osób")
-hist(później)
-?hist
-?plot
+hist(później, main = "Poziomy 10min przed operacją", xlab = "Poziomy[fmol/ml]", ylab = "U ilu osób")
 ```
 
-*Tutaj miejsce na Twoją odpowiedź*
+*10 minut przed operacją są pprzypadki osób, które mają niezwykle wysoki poziom beta-endorfin. Natomiast w obu pomiarach większość osób mieści się w przedziale 0-20.*
 
 ## Zadanie B
 
 Przygotuj wykres pudełkowy (`boxplot`), wykres słupkowy (`barplot`) wykres skrzypcowy (`vioplot` z pakietu `vioplot`) ilustrujące kształt rozkładu obserwacji w obu pomiarach. Postaraj się, aby oba zbiory danych były na jednym wykresie (czyli narysuj 3 wykresy, a nie 6). Nie zapomnij o nałożeniu na wykres legendy oraz podpisów osi oraz wybraniu ładnych kolorów. Co możesz wywnioskować na podstawie poszczególnych wykresów? Jak różnią się od siebie te trzy metody wizualizacji w tym wypadku?
 
 ```{r}
-boxplot(zad1)
-macierz <- data.matrix(zad1)
-barplot(macierz, beside = T)
-?barplot
+library(vioplot)
+
+zad2 <- read.csv("Dane/hoaglin1983.csv")
+colnames(zad2) <- c("12h przed", "10min przed")
+
+
+boxplot(zad2,
+        ylab = "Ile beta-endorfin",
+        col = c("red", "lightblue"),
+        main = "Poziom beta-endorfin przd operacją"
+        )
+
+barplot(data.matrix(zad2),
+        beside = T,
+        ylab = "Ile beta-endorfin",
+        col = c(rep("red", 19), rep("lightblue", 20)),
+        main = "Poziom beta-endorfin przd operacją"
+        )
+
+vioplot(zad2,
+        ylab = "Ile beta-endorfin",
+        col = c("red", "lightblue"),
+        main = "Poziom beta-endorfin przd operacją"
+        )
+?vioplot
 ```
 
-*Tutaj miejsce na Twoją odpowiedź*
+*Między boxplotem a vioplotem nie ma dużej różnicy poza tym, że vioplot trochę lepiej pokazuje rozkład ilości beta-endorfin u poszczególnych grup. Za to w boxplocie dokładnie widać, które wartości należałoby usunąć, aby zastosować metodę Tukeya liczenia średniej. Barplot z kolei przedstawia bardziej surowe dane, ale z kolei trudniejsze w interpretacji "na pierwszy rzut oka"*
 
 ## Zadanie C
 
 Odejmij od wartości z kolumny z poziomem beta-endorfin 12 godzin przed operacją wartości 10 minut przed operacją. Uzyskany wektor będzie zawierał różnice między tymi pomiarami dla każdego badanego. Narysuj histogram i zinterpretuj go. Nie zapomnij o nałożeniu na wykres legendy oraz podpisów osi
 
 ```{r}
-
+library(dplyr)
 dane <- read.csv("Dane/hoaglin1983.csv")
 noweDane <- transmute(dane, różnica = X12_hours - X10_minutes)
 
@@ -75,13 +94,18 @@ hist(różnica,
 
 #obliczanie średnich
 mean(różnica)
-nowaRóżnica <- sort(różnica)
-nowaRóżnica <- nowaRóżnica[3:length(różnica)]
-mean(nowaRóżnica)
+średnia_tukeya <- function(wektor, wielokrotnościQR = 1.5){
+  iqr <- IQR(wektor) * wielokrotnościQR
+  pierwszy <- quantile(wektor, 1/4)
+  trzeci <- quantile(wektor, 3/4)
+  nowy_wektor <- wektor[wektor > (pierwszy - iqr) & wektor < (trzeci + iqr)]
+  return(mean(nowy_wektor))
+}
+średnia_tukeya(różnica)
 ```
 
 *Większość osób stresuje się podobnie 12h i 10min przed operacją (różnica mniejsza niż 10)*
-*Jeśliby sprawdzić średnią wszystkich obserwacji, to będzie ona wynosiła -7,7, a przy odcięciu 2ch najbardzie odstających wyników (-38 i -45) -3,7. Oznacza to, że średnio ludzie stresują się trochę bardziej tuż przed operacją niż 12h przed nią - jednak według mnie nie jest to łatwo odczytać bezpośrednio z histogramu (konkretnie, przez te 2 najbardziej odstające wyniki wydaje się, że całość jest przesunięta w stronę ujemną, co w tym konkretnym przypadku da poprawną odpowiedź, ale nie musi)*
+*Jeśliby sprawdzić średnią wszystkich obserwacji, to będzie ona wynosiła -7,7, a przy odcięciu 2ch najbardzie odstających wyników (-38 i -45) -3,7 - te wyniki są ucinane przy zastosowaniu średniej Tukeya. Oznacza to, że średnio ludzie stresują się trochę bardziej tuż przed operacją niż 12h przed nią - jednak według mnie nie jest to łatwo odczytać bezpośrednio z histogramu (konkretnie, przez te 2 najbardziej odstające wyniki wydaje się, że całość jest przesunięta w stronę ujemną, co w tym konkretnym przypadku da poprawną odpowiedź, ale nie musi)*
 
 # Zadanie 2
 
