lab 25.11.22 i hw testowanie (final)

--- a/Prace Domowe/praca_domowa_chi_kwadrat.rmd
+++ b/Prace Domowe/praca_domowa_chi_kwadrat.rmd
@@ -2,6 +2,8 @@
 title: "Praca domowa - testy chi-kwadrat"
 author: "Bartosz Maćkiewicz"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r, include=FALSE}
