--- a/Prace Domowe/praca_domowa_chi_kwadrat.rmd
+++ b/Prace Domowe/praca_domowa_chi_kwadrat.rmd
@@ -17,10 +17,20 @@ Wykonano badania dotyczące populacji ryb występujących w pewnej okolicy. Noto
 Zadanie wykonujemy na dwa sposoby - samodzielnie licząc i korzystając z wbudowanej funkcji. Zadanie to wymaga zajrzenia do dokumentacji funkcji `chisq.test`. Napisz statystyczne podsumowanie wyników badania.
 
 ```{r}
-# Tutaj miejsce na Twój kod
+chisq.test(c(53, 22, 49), p = c(5, 3, 4), rescale.p = T)
+chisq.test(c(53, 22, 49), p = c(5, 3, 4), rescale.p = T, simulate.p.value = T, B = 10000)
+
+sum <- 53 + 22 + 49
+observed <- c(53, 22, 49)
+expected_p <- c(5, 3, 4) / 12
+expected <- sum * expected_p
+chi_2 <- sum((expected - observed)^2 / expected) #= ~4,07
+#df = 2
+qchisq(0.95, 2) #= ~6
+# chi_2 < qchi
 ```
 
-*Tu miejsce na Twoją odpowiedź*
+*Zgodnie z wynikiem testu chi^2 przyjmujemy hipotezę zerową głoszącą, że obecny stan nie różni się istotnie od wcześniej zaobserwowanego. Wartość p wykonanego testu wyniosła ~0.13 > 0.05, co odpowiada wartościom chi^2 ~ 4,07 i granicą obszaru krytycznego ~6*
 
 # Zadanie 2
 
@@ -34,10 +44,17 @@ W doświadczeniu polegającym na krzyżowaniu dwóch gatunków ryb, z których j
 Według teoretycznych rozważań genetyków, prawdopodobieństwo wystąpienia wymienionych rodzajów powinno wynosić 9:3:3:1. Na poziomie istotnosci 5% zweryfikuj hipotezę, że eksperyment potwierdził rozważania teoretyczne. Tak jak poprzednio wykonaj zadanie na dwa sposoby. Napisz statystyczne podsumowanie wyników badania.
 
 ```{r}
-# Tutaj miejsce na Twój kod
+observed <- matrix(c(315, 108, 101, 32), 2, 2)
+
+expected <- c(9, 3, 3, 1) * sum(observed) / 16
+chi_2 <- sum((observed - expected)^2 / expected)
+qchisq(0.95, 1)
+
+chisq.test(observed)
+
 ```
    
-*Tu miejsce na Twoją odpowiedź*
+*Wynik, analogicznie do poprzedniego zadania, oznacza przyjęcie hipotezy zerowej. Tym razem wartość p wyniosła 0.82. Wynik testu chi^2 to 0,47, podczas gdy granica obszaru krytycznego wynosi ok. 3,84. Zatem eksperyment potwierdził rozważania teoretyczne.*
 
 # Zadanie 3
 
@@ -51,24 +68,44 @@ Na podstawie poniższych danych chcemy odpowiedzieć na pytanie, czy występowan
 1. Używając najodpowiedniejszego testu, na poziomie istotności $\alpha = 0.05$ oceń, czy zależność występuje. Rozwiąż ten problem na dwa sposoby - używając funkcji wbudowanej w R przeprowadzającej ten test oraz odpowiedniego rozkładu teoretycznego. Napisz statystyczne podsumowanie wyników badania.
 
 ```{r}
-# Tutaj miejsce na Twój kod
+observed <- matrix(c(22, 31, 33, 20), 2, 2)
+chisq.test(observed) #z poprawką ciągłości
+chisq.test(observed, correct = F) #bez poprawki ciągłości
+
+
+n <- margin.table(observed)
+rows <- margin.table(observed, 1)
+cols <- margin.table(observed, 2)
+
+expected <- rbind(cols, cols) * cbind(rows, rows) / n
+
+chi_2 <- sum((observed - expected)^2 / expected) # ~4.57
+#df = 1
+qchisq(0.95, 1) # ~3.84
+
 ```
 
-*Tu miejsce na Twoją odpowiedź*
+*Ze względu na to, że żadna kombinacja (mężczyzna, kobieta) x (problem wystąpił, nie wystąpił) nie ma oczekiwanej wartości poniżej 5 osób, nie nalezy tutaj stosować korekcji ciągłości Yates'a. Wynik nieskorygowanego testu chi^2 to ok. 4.57, z kolei granica obszaru krytycznego to ok. 3.84. Odpowiada to wartości p = 0.03249 < 0.05, zatem odrzucamy hipotezę zerową, która głosiła, że problemy z metabolizmem są NIEzależne od płci*
 
 2. Jak możesz zauwazyć istnieje różnica między wynikami zwracanymi przez wbudowaną funkcję i tymi, które uzyskałeś za pomocą własnych obliczeń. 
 
 Związane jest to z faktem, że do tabel 2x2 funkcja wbudowana w R automatycznie stosuje poprawkę Yatesa na ciągłość. Korzystając z dostępnych Ci źródeł napisz, dlaczego poprawka ta jest używana i zaimplementuj ją sam. Napisz również polecenie, który wyłączy wprowadzanie poprawki w funkcji `chisq.test`.
 
 ```{r}
-# Tutaj miejsce na Twój kod
+chi_2_corrected <- sum((abs(observed - expected) - 0.5)^2 / expected)
+#wynik to ~3.78 co jest mniejsze od granicy obszaru krytycznego ~3.84, zatem (błędnie) stosując poprawkę Yates'a przyjęlibyśmy hipotezę zerową
 ```
 
 
 3. Wykonaj wykres ilustrujący uzyskane w eksperymencie wyniki. Możesz użyć do tego funkcji rysujących wykresy z pakietu `vcd`, ale można również samemu poszukać odpowiednich funkcji i bibliotek w internecie.
 
 ```{r}
-# Tutaj miejsce na Twój kod
+barplot(t(observed),
+        names.arg = c("Mężczyźni", "Kobiety"), 
+        col = c("cyan4", "cyan"),
+        ylim = c(0, 60)
+        )
+#ponieważ tabelka jest tutaj wymiaru 2x2, to uznałem, że najlepszym wykresem będzie tutaj zwykły słupkowy - próbowałem innych, m. in. z pakietu vcd, ale zwyczajnie nie były bardzo czytelne
 ```
 
 # Zadanie 4
@@ -159,4 +196,4 @@ Jak licznej potrzebujemy próby, by replikując eksperyment z zadania 3 moc nasz
 
 Dlaczego w testach $\chi^2$ obszar odrzucenia jest *zawsze* zlokalizowany w górnej części rozkładu?
 
-**Tutaj miejsce na Twoją odpowiedź**
+**Ponieważ minimalny wynik testu chi^2 = 0 jest możliwy tylko i wyłącznie dla w pełni niezależnych zmiennych (przy teście zależności), lub dla obserwacji idealnie odpowiadającym przewidywaniom. Dowolne odejście od tego stanu zwiększa wynik testu chi^2. Co za tym idzie, tylko przy znaczym odejściu od przewidywań, lub od perfekcyjnej niezależności, możliwiy jest duży wynik testu chi^2 - natomiast odejście to zwiększa wynik niezależnie od kierunku, gdyż różnicę podnosimy do kwadratu przy obliczeniach. Zatem wynik chi^2 zwyczajnie nie może być ujemny.**
